[gd_scene load_steps=10 format=3 uid="uid://bvb8iewnsnsoj"]

[ext_resource type="Script" uid="uid://c75qci4r1opf1" path="res://sources/language_tool/segment_container.gd" id="1_07lpk"]
[ext_resource type="FontFile" uid="uid://bw8cb4e0a7ayj" path="res://assets/fonts/kalulu_mulish_regular.otf" id="2_6k0sf"]
[ext_resource type="PackedScene" uid="uid://dbl3r8426473v" path="res://sources/language_tool/plus_button.tscn" id="2_h02qb"]

[sub_resource type="LabelSettings" id="LabelSettings_md77l"]
font = ExtResource("2_6k0sf")
font_size = 768

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ssy0w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qds63"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_54blg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8xb3m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_agg5x"]

[node name="SegmentContainer" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -766.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
mouse_filter = 2
alignment = 1
script = ExtResource("1_07lpk")

[node name="DrawingContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="DrawingContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="GraphemeLabel" type="Label" parent="DrawingContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 512
text = "LpYg"
label_settings = SubResource("LabelSettings_md77l")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlacePointButton" type="Button" parent="DrawingContainer/MarginContainer/GraphemeLabel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_ssy0w")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_qds63")
theme_override_styles/hover = SubResource("StyleBoxEmpty_54blg")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_8xb3m")
theme_override_styles/normal = SubResource("StyleBoxEmpty_agg5x")

[node name="ButtonsParent" type="Control" parent="DrawingContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="SegmentContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SegmentContainer"]
layout_mode = 2
mouse_filter = 2

[node name="AddSegmentContainer" type="PanelContainer" parent="SegmentContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="SegmentContainer/VBoxContainer/AddSegmentContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="SegmentContainer/VBoxContainer/AddSegmentContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="SegmentContainer/VBoxContainer/AddSegmentContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Add segment"

[node name="AddSegmentButton" parent="SegmentContainer/VBoxContainer/AddSegmentContainer/MarginContainer/HBoxContainer" instance=ExtResource("2_h02qb")]
layout_mode = 2

[node name="AllSegmentContainer" type="PanelContainer" parent="SegmentContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="SegmentContainer/VBoxContainer/AllSegmentContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ScrollContainer" type="ScrollContainer" parent="SegmentContainer/VBoxContainer/AllSegmentContainer/MarginContainer"]
layout_mode = 2

[node name="SegmentsContainer" type="VBoxContainer" parent="SegmentContainer/VBoxContainer/AllSegmentContainer/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="Lines" type="Node2D" parent="."]
unique_name_in_owner = true
z_index = 100

[connection signal="pressed" from="DrawingContainer/MarginContainer/GraphemeLabel/PlacePointButton" to="." method="_on_place_point_button_pressed"]
[connection signal="pressed" from="SegmentContainer/VBoxContainer/AddSegmentContainer/MarginContainer/HBoxContainer/AddSegmentButton" to="." method="_on_add_segment_button_pressed"]
